styles.css
header {
  display: flex;
  align-items: center;
  width: 100%;
  background-color: #0fb9b1;
  margin: 0;
  height: 50px;
  justify-content: space-between;
  flex-direction: row;
}

.title {
  padding-bottom: 10px;
  padding-top: -10px;
}

.button {
  padding-top: 13px;
}
.add-recipe {
  display: right;
  border-radius: 5px;
  border: none;
  height: 10px;
  margin-right: 15px;
  padding: 12px;
  font-size: 16px;
  text-align: center;
  line-height: 1px;
  background-color: white;
}

body {
  font-family: 'Roboto', sans-serif;
  background-image: url("./assets/burger-friends.jpg");
  background-size: cover;
  margin: 0;
}

.boxes {
  display: flex;
  margin-top: 60px;
  margin-bottom: 280px;

}

.left-box {
  background-color: rgba(225, 225, 225, .9);
  margin-left: 320px;
  margin-right: 80px;
  padding-left: 40px;
  padding-right: 80px;
  padding-bottom: 30px;
  padding-top: 30px;
}

.cook-button {
  background-color: #0fb9b1;
  border: none;
  border-radius: 5px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 50px;
  padding-right: 50px;
}

.hidden {
  display: none;
}

.right-box {
  background-color: rgba(225, 225, 225, .9);
  margin-left: 80px;
  margin-right: 320px;
  padding-left: 40px;
  padding-right: 80px;
  padding-bottom: 70px;
  padding-top: 70px;
}

.cookpot {
  position: relative;
  left: 40%;
  width: 35%;
  height: auto;
  margin-top: 50px;
}

.addNewRecipe {
  background-color: rgba(225, 225, 225, .9);
  display: flex;
  margin: 0;
  height: 50px;
  justify-content: space-between;
  flex-direction: row;
  text-align: center;
}

.recipe-form {
  position: bottom;
  padding-top: 15px;
  padding-left: 12px;
}

#type {
  height: 25px;
}

#name {
  height: 25px;
}

#add-new {
  border: none;
  background-color: #0fb9b1;
  border-radius: 5px;
  height: 25px;
}
/* .clear-button {
  position: relative;
  color: rgba(225, 225, 225, .9);
  background-color: #95a5a6;
  border: none;
  border-radius: 5px;
  padding-top: 5px;
  padding-bottom: 5px;
  margin-top: 80px;
  margin-left: 280px;
} */
/* COLORS
teal - #0fb9b1;
frosted white - rgba(225, 225, 225, .9);
grey - #95a5a6;
red - #ee5253 */

